fixed gap under recipe by in the single recipe view when in mobile view

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -141,7 +141,7 @@ body {
     background-color: white;
 }
 
-.instructionBox, .notesBox, .nutritionBox, .ingredientBox {
+.instructionBox, .notesBox, .nutritionBox, .ingredientBox, .titleBox {
     background-color: white;
     border: 1px solid #e3e3e3;
 }
